--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -416,3 +416,11 @@ notes:
       $y = 12x - 15$, $y = 12x + 17$.
     Annotations: ''
   tags: []
+- id: 1547241830597
+  fields:
+    Front: |
+      CCAC 03.01 55: Find an equation of the normal line to the parabola $y = x^2 - 5x + 4$ that is parallel to the line $x - 3y = 5$.
+    Back: |
+      $y = \frac{1}{3}x - \frac{1}{3}$.
+    Annotations: ''
+  tags: []
