--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -434,3 +434,11 @@ notes:
       $(\pm 2, 4)$.
     Annotations: ''
   tags: []
+- id: 1547241830848
+  fields:
+    Front: |
+      CCAC 03.01 61: Find a second-degree polynomial $P$ such that $P(2) = 5$, $P'(2) = 3$, and $P''(2) = 2$.
+    Back: |
+      $P(x) = x^2 - x + 3$.
+    Annotations: ''
+  tags: []
