--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -442,3 +442,22 @@ notes:
       $P(x) = x^2 - x + 3$.
     Annotations: ''
   tags: []
+- id: 1547241830971
+  fields:
+    Front: >
+      CCAC 03.01 63:
+
+      (a) In CCAC-02.8 we defined an antiderivative of $f$ to be a function $F$ such
+      that $F' = f$. Try to guess a formula for an antiderivative of $f(x) = x^2$.
+      Then check your answer by differentiating it. How many antiderivatives does
+      $f$ have?
+
+      (b) Find antiderivatives for $f(x) = x^3$ and $f(x) = x^4$.
+
+      (c) Find an antiderivative for $f(x) = x^n$, where $n \ne -1$. Check by differentiation.
+    Back: |
+      (a) $F(x) = \frac{1}{3}x^3 + C$, $C$ any real number; infinitely many.
+      (b) $F(x) = \frac{1}{4}x^4 + C$, $\frac{1}{5}x^5 + C$, $C$ any real number.
+      (c) $F(x) = x^{n+1}/(n+1) + C$, $C$ any real number.
+    Annotations: ''
+  tags: []
