--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -469,3 +469,11 @@ notes:
       $y = 2x^2 - x$.
     Annotations: ''
   tags: []
+- id: 1547241831289
+  fields:
+    Front: |
+      CCAC 03.01 67: Find a cubic function $y = ax^3 + bx^2 + cx + d$ whose graph has horizontal tangents at the points $(-2, 6)$ and $(2, 0)$.
+    Back: |
+      $y = \frac{3}{16}x^3 - \frac{9}{4}x + 3$.
+    Annotations: ''
+  tags: []
