--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.01.yml
@@ -477,3 +477,11 @@ notes:
       $y = \frac{3}{16}x^3 - \frac{9}{4}x + 3$.
     Annotations: ''
   tags: []
+- id: 1547241831415
+  fields:
+    Front: |
+      CCAC 03.01 69: For what values of $a$ and $b$ is the line $2x + y = b$ tangent to the parabola $y = ax^2$ when $x = 2$?
+    Back: |
+      $a = -\frac{1}{2}$, $b = 2$.
+    Annotations: ''
+  tags: []
