--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.02.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.02.yml
@@ -9,3 +9,14 @@ defaults:
   - CCAC-03-DifferentiationRules
   - CCAC-03.02-TheProductAndQuotientRules
   markdownTabLength: 2
+notes:
+- id: 1547241941946
+  fields:
+    Front: |
+      CCAC 03.02 00a: State the **Product Rule** of differentiation.
+    Back: |
+      If $f$ and $g$ are both differentiable, then
+      $$$$
+      (fg)' = fg' + gf'
+      $$$$
+    Annotations: ''
