--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.03.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.03.yml
@@ -114,3 +114,16 @@ notes:
       $$$$
     Annotations: ''
   tags: []
+- id: 1547502683971
+  fields:
+    Front: |
+      CCAC 03.03 19: Find an equation of the tangent line to the curve at the given point.
+      $$$$
+      y = \sec x, \quad (\pi/3, 2)
+      $$$$
+    Back: |
+      $$$$
+      y = 2 \sqrt{3} x - \frac{2}{3} \sqrt{3} \pi + 2
+      $$$$
+    Annotations: ''
+  tags: []
