--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.03.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.03.yml
@@ -140,3 +140,18 @@ notes:
       $$$$
     Annotations: ''
   tags: []
+- id: 1547502928046
+  media:
+  - path: ${file_dir}/images/CCAC-03.03-23.1.jpg
+  fields:
+    Front: |
+      CCAC 03.03 23:
+      (a) Find an equation of the tangent line to the curve $y = 2x \sin x$ at the point $(\pi/2, \pi)$.
+      (b) Illustrate part (a) by graphing the curve and the tangent line on the same screen.
+    Back: |
+      (a) $y = 2x$
+      (b)
+      ![](CCAC-03.03-23.1.jpg)
+    Annotations: ''
+  tags:
+  - requiresCoding
