--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.03.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.03.yml
@@ -189,3 +189,14 @@ notes:
       (b) $f'(x) = \cos x + \sin x$
     Annotations: ''
   tags: []
+- id: 1547503546070
+  fields:
+    Front: |
+      CCAC 03.03 31: For what values of $x$ does the graph of $f$ have a horizontal tangent?
+      $$$$
+      f(x) = x + 2 \sin x
+      $$$$
+    Back: |
+      $(2n + 1) \pi \pm \frac{1}{3} \pi$, $n$ an integer.
+    Annotations: ''
+  tags: []
