--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.03.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.03.yml
@@ -200,3 +200,11 @@ notes:
       $(2n + 1) \pi \pm \frac{1}{3} \pi$, $n$ an integer.
     Annotations: ''
   tags: []
+- id: 1547503614771
+  fields:
+    Front: |
+      CCAC 03.03 33: Let $f(x) = x - 2 \sin x$, $0 \le x \le 2 \pi$. On what interval is $f$ increasing?
+    Back: |
+      $(\pi / 3, 5 \pi / 3)$
+    Annotations: ''
+  tags: []
