--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.04.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.04.yml
@@ -142,3 +142,16 @@ notes:
       $$$$
     Annotations: ''
   tags: []
+- id: 1547507793096
+  fields:
+    Front: |
+      CCAC 03.04 19: Find the derivative of the function.
+      $$$$
+      y = (2x - 5)^4 (8x^2 - 5)^{-3}
+      $$$$
+    Back: |
+      $$$$
+      y' = 8(2x - 5)^3 (8x^2 - 5)^{-4} (-4x^2 + 30x - 5)
+      $$$$
+    Annotations: ''
+  tags: []
